--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -270,6 +270,7 @@
   left: 0;
   bottom: 0;
   z-index: 99999;
+  display: none;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -289,7 +290,7 @@
 }
 
 .carousel-modal-main-container .overlay {
-  z-index: -1;
+  z-index: 1;
   width: 100%;
   height: 100%;
   position: absolute;
@@ -297,7 +298,7 @@
 }
 
 .carousel-modal-main-container .slide-galery-item-main-container {
-  height: 100%;
+  height: 120vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -317,9 +318,41 @@
 }
 
 .carousel-modal-main-container .slide-galery-item-main-container .image-container {
-  background-color: violet;
+  z-index: 9999;
   width: 700px;
   height: 450px;
+  overflow: hidden;
+}
+
+.carousel-modal-main-container .slide-galery-item-main-container .image-container img {
+  width: 100%;
+  height: 100%;
+}
+
+.carousel-modal-main-container .carousel-contol-btn {
+  z-index: 99;
+  position: absolute;
+  color: #fff;
+  cursor: pointer;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+  top: 50%;
+}
+
+.carousel-modal-main-container .carousel-contol-btn.left {
+  left: 80px;
+}
+
+.carousel-modal-main-container .carousel-contol-btn.right {
+  right: 80px;
+}
+
+.carousel-modal-main-container .carousel-contol-btn:hover {
+  color: #0091ea;
+}
+
+.carousel-modal-main-container .carousel-contol-btn .galery-controls-icon {
+  font-size: 50px;
 }
 
 .about-page-main-area {
