--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,3 +1,6 @@
 $font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $transition: all 0.5s ease;
 $about-font-familly: "Raleway", sans-serif;
+$desk: 1024px;
+$tablet: 768px;
+$mobile: 480px;
