--- a/src/assets/scss/_carousel.scss
+++ b/src/assets/scss/_carousel.scss
@@ -1,6 +1,8 @@
 @import "./mixins/display";
+@import "./mixins/mediaqueries";
 @import "./colors";
 @import "./functions/home-functions";
+@import "./mixins/mediaqueries";
 
 .home-carousel-main-container {
   width: 100%;
@@ -29,6 +31,9 @@
         background-color: $primary;
         border: none;
       }
+      @include mediaqueries($mobile) {
+        padding: 10px;
+      }
     }
     z-index: 9999;
   }
@@ -56,6 +61,9 @@
         background-color: $primary;
         border: none;
       }
+      @include mediaqueries($mobile) {
+        padding: 10px;
+      }
     }
     z-index: 999;
   }
@@ -66,9 +74,9 @@
     transition: $transition;
     z-index: 99;
     animation: fadeInOpacity 1s ease-in;
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
+    background-position: center !important;
+    background-size: cover !important;
+    background-repeat: no-repeat !important;
   }
   .home-carousel-oveylay {
     position: absolute;
@@ -111,7 +119,146 @@
         color: #000;
       }
     }
+
+    @include mediaqueries($desk) {
+      h2 {
+        text-transform: uppercase;
+        font-size: 40px;
+        margin-bottom: -60px;
+      }
+      h1 {
+        text-transform: uppercase;
+        font-size: 80px;
+        margin-bottom: -10px;
+      }
+      h3 {
+        font-size: 20px;
+        //   text-transform: uppercase;
+      }
+    }
+    @include mediaqueries(900px) {
+      h2 {
+        text-transform: uppercase;
+        font-size: 35px;
+        margin-bottom: -40px;
+      }
+      h1 {
+        text-transform: uppercase;
+        font-size: 70px;
+        margin-bottom: -10px;
+      }
+      h3 {
+        font-size: 18px;
+        //   text-transform: uppercase;
+      }
+      .home-button {
+        padding: 15px 40px;
+        font-size: 16px;
+      }
+    }
+    @include mediaqueries($tablet) {
+      h2 {
+        text-transform: uppercase;
+        font-size: 20px;
+        margin-bottom: -20px;
+      }
+      h1 {
+        text-transform: uppercase;
+        font-size: 55px;
+        margin-bottom: 10px;
+      }
+      h3 {
+        font-size: 16px;
+        //   text-transform: uppercase;
+      }
+      .home-button {
+        padding: 15px 40px;
+        font-size: 16px;
+      }
+    }
+    @include mediaqueries(600px) {
+      h1 {
+        text-transform: uppercase;
+        font-size: 45px;
+        margin-bottom: 10px;
+      }
+      h3 {
+        font-size: 14px;
+        //   text-transform: uppercase;
+      }
+      .home-button {
+        padding: 15px 40px;
+        font-size: 14px;
+      }
+    }
+    @include mediaqueries($mobile) {
+      h1 {
+        text-transform: uppercase;
+        font-size: 35px;
+        margin-bottom: 10px;
+        line-height: 2;
+      }
+      h3 {
+        font-size: 14px;
+        width: 60%;
+        text-align: center;
+        line-height: 1.4;
+        //   text-transform: uppercase;
+      }
+      .home-button {
+        padding: 15px 40px;
+        font-size: 14px;
+      }
+    }
+    @include mediaqueries(380px) {
+      text-align: center;
+      h1 {
+        text-transform: uppercase;
+        font-size: 25px;
+        margin-bottom: 20px;
+        text-align: center;
+      }
+      h3 {
+        font-size: 14px;
+        width: 50%;
+        margin-bottom: 20px;
+        text-align: center;
+
+        //   text-transform: uppercase;
+      }
+      .home-button {
+        padding: 15px 40px;
+        font-size: 14px;
+      }
+    }
+    @include mediaqueries(340px) {
+      text-align: center;
+      h1 {
+        text-transform: uppercase;
+        font-size: 20px;
+        margin-bottom: 20px;
+        line-height: 3;
+        text-align: center;
+        width: 60%;
+      }
+      h2 {
+        line-height: 2;
+        width: 80%;
+      }
+      h3 {
+        font-size: 16px;
+        text-align: center;
+        line-height: 1.4;
+
+        //   text-transform: uppercase;
+      }
+      .home-button {
+        padding: 15px 40px;
+        font-size: 14px;
+      }
+    }
   }
+
   .home-carousel-slide-area.active {
     display: flex;
   }
@@ -167,8 +314,9 @@
   top: 0;
   left: 0;
   bottom: 0;
-  z-index: 99999;
+  z-index: 999999;
   display: none;
+  background-color: rgba(0, 0, 0, 0.877);
   @include display(column);
   justify-content: center;
   .overlay {
@@ -176,7 +324,6 @@
     width: 100%;
     height: 100%;
     position: absolute;
-    background-color: rgba(0, 0, 0, 0.877);
   }
   .slide-galery-item-main-container {
     height: 120vh;
@@ -191,6 +338,46 @@
         width: 100%;
         height: 100%;
       }
+      @include mediaqueries(1000px) {
+        width: 580px;
+        height: 380px;
+        overflow: hidden;
+      }
+      @include mediaqueries(930px) {
+        width: 500px;
+        height: 320px;
+        overflow: hidden;
+      }
+      @include mediaqueries($tablet) {
+        width: 460px;
+        height: 300px;
+        overflow: hidden;
+      }
+      @include mediaqueries(600px) {
+        width: 100%;
+        height: 400px;
+        overflow: hidden;
+      }
+      @include mediaqueries(550px) {
+        width: 100%;
+        height: 370px;
+        overflow: hidden;
+      }
+      @include mediaqueries(500px) {
+        width: 100%;
+        height: 340px;
+        overflow: hidden;
+      }
+      @include mediaqueries(380px) {
+        width: 100%;
+        height: 300px;
+        overflow: hidden;
+      }
+      @include mediaqueries(350px) {
+        width: 100%;
+        height: 250px;
+        overflow: hidden;
+      }
     }
   }
   .carousel-contol-btn {
@@ -200,6 +387,9 @@
     cursor: pointer;
     transition: $transition;
     top: 50%;
+    @include mediaqueries(900px) {
+      top: 45%;
+    }
     &.left {
       left: 80px;
     }
@@ -211,6 +401,34 @@
     }
     .galery-controls-icon {
       font-size: 50px;
+    }
+    @include mediaqueries(900px) {
+      &.left {
+        left: 40px;
+      }
+      &.right {
+        right: 40px;
+      }
+      &:hover {
+        color: $primary;
+      }
+      .galery-controls-icon {
+        font-size: 40px;
+      }
+    }
+    @include mediaqueries(600px) {
+      &.left {
+        left: 20px;
+      }
+      &.right {
+        right: 20px;
+      }
+      &:hover {
+        color: $primary;
+      }
+      .galery-controls-icon {
+        font-size: 40px;
+      }
     }
   }
 }
