--- a/src/assets/scss/_galery.scss
+++ b/src/assets/scss/_galery.scss
@@ -1,5 +1,6 @@
 @import "./colors";
 @import "./mixins/display";
+@import "./mixins/mediaqueries";
 @import "./variables";
 @import "./functions/home-functions";
 .galery-main-area {
@@ -33,6 +34,39 @@
         &.active {
           border: 1px solid $primary;
           color: $primary;
+        }
+      }
+    }
+
+    @include mediaqueries($tablet) {
+      color: lighten($dark, 40%);
+      ul {
+        padding-left: 0;
+        li {
+          margin: 10px;
+          padding: 6px 8px;
+        }
+      }
+    }
+    @include mediaqueries($mobile) {
+      color: lighten($dark, 40%);
+      ul {
+        padding-left: 0;
+        li {
+          margin: 5px;
+          padding: 6px 8px;
+          font-size: 12px;
+        }
+      }
+    }
+    @include mediaqueries(290px) {
+      color: lighten($dark, 40%);
+      ul {
+        padding-left: 0;
+        li {
+          margin: 5px 2px;
+          padding: 4px 5px;
+          font-size: 12px;
         }
       }
     }
@@ -136,6 +170,42 @@
           transition: $transition !important;
         }
       }
+
+      @include mediaqueries(900px) {
+        .image-container {
+          height: 200px;
+        }
+      }
+      @include mediaqueries($tablet) {
+        grid-template-columns: repeat(2, 1fr);
+        .image-container {
+          height: 250px;
+        }
+      }
+      @include mediaqueries(620px) {
+        grid-template-columns: repeat(2, 1fr);
+        .image-container {
+          height: 220px;
+        }
+      }
+      @include mediaqueries(560px) {
+        grid-template-columns: repeat(2, 1fr);
+        .image-container {
+          height: 180px;
+        }
+      }
+      @include mediaqueries($mobile) {
+        grid-template-columns: repeat(1, 1fr);
+        .image-container {
+          height: 300px;
+        }
+      }
+      @include mediaqueries(380px) {
+        grid-template-columns: repeat(1, 1fr);
+        .image-container {
+          height: 250px;
+        }
+      }
     }
   }
 }
@@ -143,7 +213,7 @@
 .acomplishments-main-container {
   z-index: 9999;
   width: 100%;
-  height: 280px;
+  min-height: 280px;
   background-color: $accomplishemnts-bg-color;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -163,6 +233,77 @@
     }
     span {
       font-size: 20px;
+    }
+  }
+
+  @include mediaqueries(1000px) {
+    .accomplishemnt-item {
+      .accomplishment-icon {
+        font-size: 30px;
+      }
+
+      h1 {
+        font-size: 60px;
+        margin: 1px 0;
+        color: $primary;
+      }
+      span {
+        font-size: 16px;
+      }
+    }
+  }
+  @include mediaqueries(800px) {
+    .accomplishemnt-item {
+      .accomplishment-icon {
+        font-size: 25px;
+      }
+
+      h1 {
+        font-size: 50px;
+        margin: 1px 0;
+        color: $primary;
+      }
+      span {
+        font-size: 14px;
+      }
+    }
+  }
+  @include mediaqueries(700px) {
+    height: auto;
+    grid-template-columns: repeat(2, 1fr);
+    .accomplishemnt-item {
+      margin: 40px 0;
+      .accomplishment-icon {
+        font-size: 25px;
+      }
+
+      h1 {
+        font-size: 40px;
+        margin: 1px 0;
+        color: $primary;
+      }
+      span {
+        font-size: 14px;
+      }
+    }
+  }
+  @include mediaqueries(360px) {
+    height: auto;
+    grid-template-columns: repeat(1, 1fr);
+    .accomplishemnt-item {
+      margin: 40px 0;
+      .accomplishment-icon {
+        font-size: 25px;
+      }
+
+      h1 {
+        font-size: 40px;
+        margin: 1px 0;
+        color: $primary;
+      }
+      span {
+        font-size: 14px;
+      }
     }
   }
 }
