--- a/src/assets/scss/_about-page.scss
+++ b/src/assets/scss/_about-page.scss
@@ -17,12 +17,17 @@
     background-image: url("../img/14.jpg");
     background-position: center;
     background-size: cover;
+
+    text-align: center;
     background-repeat: no-repeat;
     h1 {
       font-size: 55px;
       margin-bottom: 5px;
+      text-align: center;
     }
     h4 {
+      text-align: center;
+
       text-transform: uppercase;
       margin-top: 0px;
     }
@@ -35,12 +40,30 @@
       z-index: -1;
       background-color: rgba(0, 0, 0, 0.616);
     }
+
+    @include mediaqueries($tablet) {
+      h1 {
+        font-size: 45px;
+      }
+      h4 {
+        text-align: center;
+      }
+    }
+    @include mediaqueries($mobile) {
+      h1 {
+        font-size: 35px;
+      }
+      h4 {
+        text-align: center;
+      }
+    }
   }
   .skills-main-area {
     width: 100%;
     display: flex;
     flex-direction: row;
     background-color: #f1f1f1;
+
     .image-wrapper {
       flex: 1;
       height: 680px;
@@ -50,6 +73,25 @@
         width: 100%;
         height: 100%;
       }
+      @include mediaqueries(950px) {
+        height: 600px;
+      }
+      @include mediaqueries(800px) {
+        height: 520px;
+      }
+      @include mediaqueries($tablet) {
+        height: 720px;
+      }
+      @include mediaqueries(550px) {
+        height: 620px;
+      }
+      @include mediaqueries(440px) {
+        height: 420px;
+      }
+    }
+    @include mediaqueries($tablet) {
+      flex-direction: column;
+      margin-top: 50px;
     }
     .text-wrapper {
       flex: 1;
@@ -58,6 +100,7 @@
       justify-content: center;
       align-items: flex-start;
       background-color: #fff;
+
       .skills-header {
         margin-left: 80px;
         color: lighten($dark, 20%);
@@ -102,8 +145,44 @@
           }
         }
       }
+      @include mediaqueries(950px) {
+        height: 600px;
+        .skills-header {
+          margin-left: 30px;
+        }
+        .skill-slider-container {
+          h3 {
+            margin-left: 30px;
+          }
+          .slider {
+            margin-left: 30px;
+          }
+        }
+      }
+      @include mediaqueries(800px) {
+        height: 520px;
+        .skills-header {
+          margin-left: 30px;
+          h1 {
+            font-size: 25px;
+          }
+        }
+        .skill-slider-container {
+          h3 {
+            margin-left: 30px;
+          }
+          .slider {
+            margin-left: 30px;
+          }
+        }
+      }
+      @include mediaqueries($tablet) {
+        padding-top: 100px;
+        padding-bottom: 100px;
+      }
     }
   }
+
   .about-page-about-us-area {
     width: 100%;
     display: flex;
@@ -133,6 +212,15 @@
       img {
         width: 100%;
         height: 100%;
+      }
+    }
+
+    @include mediaqueries($tablet) {
+      flex-direction: column;
+      .text-container-area {
+        padding-top: 100px;
+        padding-bottom: 100px;
+        padding-left: 30px;
       }
     }
   }
