--- a/src/assets/scss/_services.scss
+++ b/src/assets/scss/_services.scss
@@ -1,3 +1,5 @@
+@import "./mixins/mediaqueries";
+@import "./variables";
 .services-page-main-container {
   width: 100%;
   background-color: $about-color-main;
@@ -18,10 +20,12 @@
     h1 {
       font-size: 55px;
       margin-bottom: 5px;
+      text-align: center;
     }
     h4 {
       text-transform: uppercase;
       margin-top: 0px;
+      text-align: center;
     }
     .overlay {
       position: absolute;
@@ -31,6 +35,20 @@
       top: 0;
       z-index: -1;
       background-color: rgba(0, 0, 0, 0.616);
+    }
+    @include mediaqueries($tablet) {
+      h1 {
+        font-size: 45px;
+        margin-bottom: 5px;
+        text-align: center;
+      }
+    }
+    @include mediaqueries($mobile) {
+      h1 {
+        font-size: 35px;
+        margin-bottom: 5px;
+        text-align: center;
+      }
     }
   }
 
@@ -76,6 +94,23 @@
             color: lighten($dark, 40%);
             line-height: 1.4;
           }
+        }
+      }
+      @include mediaqueries(1400px) {
+        grid-gap: 20px;
+      }
+      @include mediaqueries(900px) {
+        grid-gap: 20px;
+        grid-template-columns: repeat(2, 1fr);
+        .service-item-wrapper {
+          margin: 30px 0;
+        }
+      }
+      @include mediaqueries($tablet) {
+        grid-gap: 20px;
+        grid-template-columns: repeat(1, 1fr);
+        .service-item-wrapper {
+          margin: 30px 0;
         }
       }
     }
