--- a/src/assets/scss/_contact.scss
+++ b/src/assets/scss/_contact.scss
@@ -187,6 +187,7 @@
     @include display(row);
     justify-content: center;
     padding: 20px 50px;
+
     .btn-container {
       background-color: $primary;
       padding: 15px 45px;
@@ -196,6 +197,20 @@
       font-size: 14px;
       cursor: pointer !important;
       transition: $transition;
+      position: relative;
+      overflow: hidden;
+      &.sending {
+        .sending-overlay {
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          left: 0;
+          top: 0;
+          background-color: rgba(0, 0, 0, 0.616);
+          // z-index: 9;
+          cursor: not-allowed;
+        }
+      }
       &:hover {
         background-color: lighten($primary, 10%);
       }
@@ -215,5 +230,53 @@
       width: 100%;
       height: 100%;
     }
+  }
+}
+.contact-page-main-container {
+  .loader {
+    border: 6px solid $white;
+    border-radius: 50%;
+    border-top: 6px solid $primary;
+    width: 40px;
+    height: 40px;
+    -webkit-animation: spin 1s linear infinite; /* Safari */
+    animation: spin 1s linear infinite;
+  }
+
+  /* Safari */
+  @-webkit-keyframes spin {
+    0% {
+      -webkit-transform: rotate(0deg);
+    }
+    100% {
+      -webkit-transform: rotate(360deg);
+    }
+  }
+
+  @keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+}
+.loading-spinner-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-left: 50px;
+  margin-top: 20px;
+
+  @include mediaqueries($tablet) {
+    padding-left: 20px;
+  }
+  @include mediaqueries(900px) {
+    padding-left: 20px;
+  }
+  @include mediaqueries($mobile) {
+    padding-left: 0px;
   }
 }
