--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1251,6 +1251,41 @@
   }
 }
 
+.view-more-btn-container {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 50px 0;
+}
+
+.view-more-btn-container a {
+  padding: 10px 30px;
+  text-decoration: none;
+  color: #fff;
+  background-color: #0091ea;
+  border-radius: 30px;
+  text-transform: uppercase;
+  font-size: 14px;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+  cursor: pointer;
+}
+
+.view-more-btn-container a:hover {
+  background-color: #51bdff;
+}
+
+.header-contact-page.galery {
+  background-image: url("../img/74.jpeg") !important;
+}
+
 .footer-main-area {
   position: fixed;
   bottom: 0;
@@ -2549,7 +2584,7 @@
       -ms-flex-pack: center;
           justify-content: center;
   position: relative;
-  background-image: url("../img/14.jpg");
+  background-image: url("../img/61.jpeg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -2768,7 +2803,7 @@
       -ms-flex-pack: center;
           justify-content: center;
   position: relative;
-  background-image: url("../img/14.jpg");
+  background-image: url("../img/60.jpeg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
