--- a/src/assets/scss/_contact.scss
+++ b/src/assets/scss/_contact.scss
@@ -11,7 +11,7 @@
     @include display(column);
     justify-content: center;
     position: relative;
-    background-image: url("../img/14.jpg");
+    background-image: url("../img/60.jpeg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
