--- a/src/assets/scss/_galery.scss
+++ b/src/assets/scss/_galery.scss
@@ -307,3 +307,27 @@
     }
   }
 }
+.view-more-btn-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 50px 0;
+  a {
+    padding: 10px 30px;
+    text-decoration: none;
+    color: $white;
+    background-color: $primary;
+    border-radius: 30px;
+    text-transform: uppercase;
+    font-size: 14px;
+    transition: $transition;
+    cursor: pointer;
+    &:hover {
+      background-color: lighten($primary, 20%);
+    }
+  }
+}
+.header-contact-page.galery {
+  background-image: url("../img/74.jpeg") !important;
+}
