--- a/src/assets/scss/_services.scss
+++ b/src/assets/scss/_services.scss
@@ -13,7 +13,7 @@
     @include display(column);
     justify-content: center;
     position: relative;
-    background-image: url("../img/14.jpg");
+    background-image: url("../img/61.jpeg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
