--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -7,6 +7,12 @@
   z-index: 9999;
 }
 
+@media (max-width: 480px) {
+  .home-main-area {
+    height: 600px;
+  }
+}
+
 .home-carousel-main-container {
   width: 100%;
   height: 100%;
@@ -1544,10 +1550,11 @@
   text-decoration: none;
   margin-left: 10px;
   text-align: center;
+  color: #0091ea;
 }
 
 .footer-main-area .footer-bottom-area .copyright a:hover {
-  color: #0091ea;
+  color: #51bdff;
 }
 
 @media (max-width: 850px) {
