--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -3543,12 +3543,17 @@ header .header-links-container ul li a {
   background-color: #5b86e5;
   -webkit-animation: animateTextLoading 5s infinite;
           animation: animateTextLoading 5s infinite;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .loadin-main-container h3 {
   color: #fff;
   font-size: 250px;
   opacity: 0.3;
+  margin-bottom: -10px;
 }
 
 @media (max-width: 900px) {
@@ -3566,6 +3571,31 @@ header .header-links-container ul li a {
 @media (max-width: 480px) {
   .loadin-main-container h3 {
     font-size: 90px;
+  }
+}
+
+.loadin-main-container h5 {
+  font-size: 70px;
+  color: #fff;
+  opacity: 0.2;
+  margin: 0;
+}
+
+@media (max-width: 900px) {
+  .loadin-main-container h5 {
+    font-size: 70px;
+  }
+}
+
+@media (max-width: 768px) {
+  .loadin-main-container h5 {
+    font-size: 60px;
+  }
+}
+
+@media (max-width: 480px) {
+  .loadin-main-container h5 {
+    font-size: 30px;
   }
 }
 
