--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -240,10 +240,12 @@ header {
   position: relative;
   background-color: #5b86e5;
   animation: animateTextLoading 5s infinite;
+  flex-direction: column;
   h3 {
     color: #fff;
     font-size: 250px;
     opacity: 0.3;
+    margin-bottom: -10px;
     @include mediaqueries(900px) {
       font-size: 200px;
     }
@@ -252,6 +254,21 @@ header {
     }
     @include mediaqueries($mobile) {
       font-size: 90px;
+    }
+  }
+  h5 {
+    font-size: 70px;
+    color: $white;
+    opacity: 0.2;
+    margin: 0;
+    @include mediaqueries(900px) {
+      font-size: 70px;
+    }
+    @include mediaqueries($tablet) {
+      font-size: 60px;
+    }
+    @include mediaqueries($mobile) {
+      font-size: 30px;
     }
   }
 }
